# app/controllers/profiles_controller.rb
@@ -2,6 +2,15 @@
 
 # API for Profiles
 class ProfilesController < ApplicationController
+  ALLOWED_CREATE_ATTRIBUTES = %i[
+    name description compliance_threshold business_objective_id
+    parent_profile_id
+  ].freeze
+
+  ALLOWED_UPDATE_ATTRIBUTES = %i[
+    name description compliance_threshold business_objective_id
+  ].freeze
+
   def index
     render_json scope_search.sort_by(&:score)
   end
@@ -12,10 +21,9 @@ class ProfilesController < ApplicationController
   end
 
   def create
-    profile = Profile.new(profile_create_params.to_h)
+    profile = Profile.new(profile_create_attributes)
                      .fill_from_parent
     if profile.save
-      profile.add_rules(ids: profile_create_params[:rule_ids])
       render_json profile
     else
       render_error profile
@@ -23,7 +31,7 @@ class ProfilesController < ApplicationController
   end
 
   def update
-    if profile.update(profile_update_params.to_h)
+    if profile.update(profile_update_attributes)
       render_json profile
     else
       render_error profile
@@ -53,6 +61,11 @@ class ProfilesController < ApplicationController
     @profile ||= Pundit.policy_scope(current_user, resource).find(params[:id])
   end
 
+  def parent_profile
+    @parent_profile ||= Pundit.policy_scope(current_user, resource)
+                              .find(profile_params[:parent_profile_id])
+  end
+
   def resource
     Profile
   end
@@ -61,33 +74,20 @@ class ProfilesController < ApplicationController
     ProfileSerializer
   end
 
-  # Profile params
-  module Params
-    extend ActiveSupport::Concern
+  def profile_params
+    params.require(:data).require(:attributes)
+          .permit(serializer.attributes_to_serialize.keys)
+  end
 
-    included do
-      private
-
-      def profile_params
-        params.require(:data)
-              .require(:attributes)
-              .permit(:description, :name, :compliance_threshold,
-                      :business_objective_id)
-      end
-
-      def profile_create_params
-        params.require(:data).require(:attributes).require(:parent_profile_id)
-        params.require(:data).require(:attributes)
-              .with_defaults(account_id: current_user.account_id)
-              .permit(:description, :name, :compliance_threshold, :ref_id,
-                      :business_objective_id, :rule_ids, :parent_profile_id)
-      end
-
-      def profile_update_params
-        params.require(:data).require(:attributes)
-              .permit(:name, :description,
-                      :compliance_threshold, :business_objective_id)
-      end
+  def profile_create_attributes
+    profile_params.to_h.slice(*ALLOWED_CREATE_ATTRIBUTES)
+                  .merge(account_id: current_user.account_id).tap do
+      parent_profile
     end
-  end; include Params
+  end
+
+  def profile_update_attributes
+    profile_params.to_h.slice(*ALLOWED_UPDATE_ATTRIBUTES)
+                  .merge(account_id: current_user.account_id)
+  end
 end
