# swagger/v1/openapi.json
@@ -339,6 +339,69 @@
             }
           }
         }
+      },
+      "post": {
+        "summary": "Create a profile",
+        "tags": [
+          "profile"
+        ],
+        "description": "Creates a profile with the requested attributes",
+        "operationId": "CreateProfile",
+        "consumes": [
+          "application/vnd.api+json"
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "X-RH-IDENTITY",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "data",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "attributes": {
+                  "$ref": "#/definitions/profile"
+                }
+              },
+              "required": [
+                "attributes"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Creates the profile with the requested attributes",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string"
+                    },
+                    "id": {
+                      "type": "string",
+                      "format": "uuid"
+                    },
+                    "attributes": {
+                      "$ref": "#/definitions/profile"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/compliance/profiles/{id}": {
@@ -452,6 +515,69 @@
                     "score": 1,
                     "total_host_count": 1,
                     "compliant_host_count": 1
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Update a profile",
+        "tags": [
+          "profile"
+        ],
+        "description": "Updates a profile with the requested attributes",
+        "operationId": "UpdateProfile",
+        "consumes": [
+          "application/vnd.api+json"
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "X-RH-IDENTITY",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "data",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "attributes": {
+                  "$ref": "#/definitions/profile"
+                }
+              },
+              "required": [
+                "attributes"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Updates the profile with the requested attributes",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string"
+                    },
+                    "id": {
+                      "type": "string",
+                      "format": "uuid"
+                    },
+                    "attributes": {
+                      "$ref": "#/definitions/profile"
+                    }
                   }
                 }
               }
@@ -1028,18 +1154,48 @@
           "nullable": true,
           "example": "0105a0f0-7379-4897-a891-f95cfb9ddf9c"
         },
+        "parent_profile_ref_id": {
+          "type": "string",
+          "nullable": true,
+          "example": "xccdf_org.ssgproject.content_profile_standard"
+        },
         "description": {
           "type": "string",
           "nullable": true,
           "example": "This profile contains rules to ensure standard security baseline\\nof a Red Hat Enterprise Linux 7 system. Regardless of your system's workload\\nall of these checks should pass."
         },
         "compliance_threshold": {
-          "type": "number"
+          "type": "number",
+          "example": 95.0
         },
-        "business_objective_id": {
+        "score": {
+          "type": "number",
+          "example": 63.154762
+        },
+        "business_objective": {
           "type": "string",
-          "format": "uuid",
-          "example": "0105a0f0-7379-4897-a891-f95cfb9ddf9c"
+          "example": "APAC Expansion",
+          "nullable": true
+        },
+        "canonical": {
+          "type": "boolean",
+          "example": true
+        },
+        "compliant_host_count": {
+          "type": "integer",
+          "example": 3
+        },
+        "external": {
+          "type": "boolean",
+          "example": false
+        },
+        "tailored": {
+          "type": "boolean",
+          "example": false
+        },
+        "total_host_count": {
+          "type": "integer",
+          "example": 5
         }
       }
     },
